--- a/tools/cfgs/dataset_configs/nuscenes_dataset.yaml
+++ b/tools/cfgs/dataset_configs/nuscenes_dataset.yaml
@@ -1,7 +1,8 @@
 DATASET: 'NuScenesDataset'
-DATA_PATH: '../data/nuscenes'
+DATA_PATH: '/data/ayh/data_lidar/nuscenes'
 
 VERSION: 'v1.0-trainval'
+#VERSION: 'v1.0-mini'
 MAX_SWEEPS: 10
 PRED_VELOCITY: True
 SET_NAN_VELOCITY_TO_ZEROS: True
