--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            "justMyCode": true
-        },
-        {
-            "name": "train",
+            "name": "train_ppmh_custom",
             "args": [
-                "--cfg_file" ,"./cfgs/nuscenes_models/cbgs_pillar0075_res2d_centerpoint.yaml", 
+                // "-m","torch.distributed.launch","--nproc_per_node=2",
+                // "--cfg_file" ,"./cfgs/nuscenes_models/cbgs_pp_multihead.yaml", 
+                // "--cfg_file" ,"/home/ayh/OpenPCDet/PCDet_an/tools/cfgs/custom_models/custom_pp_multihead.yaml", 
+                "--cfg_file" ,"/home/ayh/OpenPCDet/PCDet_an/tools/cfgs/custom_models/cbgs_pp_multihead.yaml", 
+                "--extra_tag","new_0320_pp_multihead",
                 "--batch_size","2",
                 "--epochs","100"
 
@@ -26,6 +22,20 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "${fileDirname}"
+        },
+        {
+            "name": "create_data_pkl",
+            "args": [
+                "create_custom_infos",
+                "/home/ayh/OpenPCDet/PCDet_an/tools/cfgs/dataset_configs/custom_dataset.yaml"
+            ],
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "${fileDirname}"
+
         }
     ]
 }
