--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
                 // "-m","torch.distributed.launch","--nproc_per_node=2",
                 // "--cfg_file" ,"./cfgs/nuscenes_models/cbgs_pp_multihead.yaml", 
                 // "--cfg_file" ,"/home/ayh/OpenPCDet/PCDet_an/tools/cfgs/custom_models/custom_pp_multihead.yaml", 
-                "--cfg_file" ,"/home/ayh/OpenPCDet/PCDet_an/tools/cfgs/custom_models/cbgs_pp_multihead.yaml", 
-                "--extra_tag","new_0320_pp_multihead",
+                "--cfg_file" ,"/home/ayh/OpenPCDet/PCDet_an/tools/cfgs/custom_models/custom_pp_multihead.yaml", 
+                "--extra_tag","new_0320_pp_mh",
                 "--batch_size","2",
                 "--epochs","100"
 
