--- a/tools/cfgs/dataset_configs/custom_dataset.yaml
+++ b/tools/cfgs/dataset_configs/custom_dataset.yaml
@@ -1,12 +1,15 @@
 DATASET: 'CustomDataset'
-DATA_PATH: '/data/ayh/data_lidar/waymo/waymo_lidar_data'
+DATA_PATH: '/data/ayh/data_lidar/waymo/57_lidar_data'
 
 POINT_CLOUD_RANGE: [-51.2, -51.2, -2.0, 51.2, 51.2, 4.0]
 
 MAP_CLASS_TO_KITTI: {
     'Vehicle': 'Car',
+    'BigVehicle': 'Car',
+    'Barrier': 'Pedestrian',
     'Pedestrian': 'Pedestrian',
     'Cyclist': 'Cyclist',
+    'Traffic_cone': 'Cyclist'
 }
 
 DATA_SPLIT: {
@@ -22,7 +25,7 @@ INFO_PATH: {
 POINT_FEATURE_ENCODING: {
     encoding_type: absolute_coordinates_encoding,
     used_feature_list: ['x', 'y', 'z', 'intensity'],
-    src_feature_list: ['x', 'y', 'z', 'intensity'],
+    src_feature_list: ['x', 'y', 'z', 'intensity']
 }
 
 DATA_AUGMENTOR:
